Massive cleanup to locating framework.
- Locators are now composable via the builder.
- Intellij and Gradle locators have been separated from the platform impls.
- Generally more clean and less data flowy.